# Roxxel

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  roxxel.py  test_roxxel.py
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-docs.yml  publish.yml
docs/: checkpointing.md  curriculum.md  dataloader_and_streaming.md  index.md  logging.md  trainer.md  tutorial.md  why_roxxel.md
docs/stylesheets/: extra.css
roxxel/: __init__.py  checkpoint.py  core.py  logging.py  mixer.py  trainer.py
tests/: test_roxxel.py
