[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roxxel"
version = "0.1.0"
description = "A zero-RAM, multi-modal, sharded binary dataset manager"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "anon160", email = "anon160@users.noreply.github.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0"
]

[tool.hatch.build.targets.wheel]
packages = ["roxxel.py"]
